modified css accordingly

--- a/style.css
+++ b/style.css
@@ -27,16 +27,17 @@ a:hover { color: #eee; }
 /* ------------ */
 /* -- Header -- */
 /* ------------ */
-#header { float: left; width: 730px; margin: 0 0 55px 0; }
-#header #header-content { float: left; width: 450px; }
-#header #header-content h1 { margin: 0 0 2px 0; color: #444; }
-#header #header-content h2 { color: #0b8bbb; font-size: 28px; }
-#header #header-content p { font-size: 15px; margin: 0 0 0 1px; }
-#header #contact-details { float: left; margin: 18px 0 0 0; }
-#header #header-content .contact { font-size: 16px; color: #888; margin: 0; }
-#header #header-content .contact span { color: #444; width: 75px; float: left; } 
-#header #header-photo { float: right;  background-color: #eee;  padding: 5px 5px 2px 5px; -webkit-box-shadow: 0px 0 10px #aaa; -moz-box-shadow: 0px 0 10px #aaa; box-shadow: 0px 0 10px #aaa; }
-#header #header-photo img { width: 200px; height: 220px; border: 1px #ddd solid; }
+header { float: left; width: 730px; margin: 0 0 55px 0; }
+header #header-content { float: left; width: 450px; }
+header #header-content h1 { margin: 0 0 2px 0; color: #444; }
+header #header-content h2 { color: #0b8bbb; font-size: 28px; }
+header #header-content p { font-size: 15px; margin: 0 0 0 1px; }
+header #contact-details { float: left; margin: 18px 0 0 0; }
+header #header-content .contact { font-size: 16px; color: #888; margin: 0; }
+header #header-content .contact span { color: #444; width: 75px; float: left; } 
+header #header-content .contact a {  } 
+header #header-photo { float: right;  background-color: #eee;  padding: 5px 5px 2px 5px; -webkit-box-shadow: 0px 0 10px #aaa; -moz-box-shadow: 0px 0 10px #aaa; box-shadow: 0px 0 10px #aaa; }
+header #header-photo img { width: 200px; height: 220px; border: 1px #ddd solid; }
 
 /* ------------- */
 /* -- Content -- */
