--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@ header #header-content .contact { font-size: 16px; color: #888; margin: 0; }
 header #header-content .contact span { color: #444; width: 75px; float: left; } 
 header #header-content .contact a {  } 
 header #header-photo { float: right;  background-color: #eee;  padding: 5px 5px 2px 5px; -webkit-box-shadow: 0px 0 10px #aaa; -moz-box-shadow: 0px 0 10px #aaa; box-shadow: 0px 0 10px #aaa; }
+.no-touch header #header-photo { background: url(./arturh.vcf.png);
+                                 background-position:center; }
 header #header-photo img { width: 200px; height: 220px; border: 1px #ddd solid; }
 .no-touch header #header-photo:hover img { visibility: hidden; }
-.no-touch header #header-photo { background: url(./arturh.vcf.png); }
 
 /* ------------- */
 /* -- Content -- */
