hide rt where not supported

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ URL: http://www.chris-creed.com
 
 @import "styles/reset.css";
 
+.no-ruby rt {display: none;}
+
 /* -------------------- */
 /* -- General Styles -- */
 /* -------------------- */
