Trying gothic font-family for ruby

--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ URL: http://www.chris-creed.com
 @import "styles/reset.css";
 
 .no-ruby rt {display: none;} 
-rt {color: #bbb;
-    } 
+.no-ruby rt {display: none;} 
+rt {font-family: gothic;
+    color: #bbb;} 
 
 /* -------------------- */
 /* -- General Styles -- */
