disabled touch link size for now

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p { font-size: 18px; line-height: 22px; margin: 0 0 15px 0; }
 
 a { text-decoration: none; color: #0b8bbb; }
 a:hover { color: #0b8bbb; }
-.touch a { font-size: 44px; }
+.touchx a { font-size: 44px; }
 
 .line { clear: both; border-bottom: 2px #eee solid; }
 
